# document_manager

./: .gitignore  main.py  mkdocs.yml  pyproject.toml
docs/: index.md
docs/core/domain/entities/: base_domain_entity.md  base_entity.md  document.md  tenant.md
docs/core/domain/events/: document.md  tenant.md
docs/core/domain/repositorys/: document.md  tenant.md
docs/core/domain/value_objects/: doc_status.md  doc_types.md
docs/getting-started/: architecture.md
src/core/application/services/: base.py  document_service.py  tenant_service.py
src/core/application/use_cases/: base.py  create_document.py
src/core/application/use_cases/tenant/: create.py
src/core/domain/: exceptions.py
src/core/domain/entities/: base.py  document.py  tenant.py
src/core/domain/events/: document.py  tenant.py
src/core/domain/repositorys/: base.py  document.py  tenant.py
src/core/domain/value_objects/: doc_status.py  doc_types.py
src/document_types/contract/domain/: value_object.py
src/document_types/contract/domain/entities/: contract.py  exceptions.py
tests/unit/core/: conftest.py
tests/unit/core/application/services/: test_document_service.py  test_documente_service_base.py
tests/unit/core/application/use_cases/: test_create_document_use_case.py
tests/unit/core/application/use_cases/tenant/: test_create.py
tests/unit/core/domain/entities/: test_base.py  test_document.py  test_tenant.py
tests/unit/core/domain/entities/events/: test_document_event.py  test_tenant_event.py
tests/unit/core/domain/value_objects/: test_doc_status.py  test_doc_types.py
