[project]
name = "document-manager"
version = "0.1.0"
description = "Gerenciador de Documentos"
authors = [
    {name = "Matheus Kepy",email = "matheuskdev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
isort = "^6.0.1"
flake8 = "^7.3.0"
black = "^25.1.0"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
mkdocs-material = "^9.6.16"

[tool.pytest.ini_options]
pythonpath = "." # Note: string value required

[tool.isort]
profile = "black"
line_length = 79
skip = ["manage.py", "venv"]

[tool.blue]
exclude = ["manage.py", "venv"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
  \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | venv
 | _build
 | buck-out
 | build
 | settings\.py
 | migrations
 )/
'''

[tool.flake8]
max-line-length = 79
exclude = ["manage.py", "venv"]

[tool.taskipy.tasks]
lint = "black --check --diff .  && isort --check --diff ."
format = "black .  && isort . && flake8 . --exclude venv"
docs = "mkdocs serve"
build-docs = "mkdocs build"
pre_test = "task lint"
test = "pytest -s -x --cov -vv  --ignore=create_superuser.py"
post_test = "coverage html"
migra = "python manage.py makemigrations && python manage.py migrate"
run = "python manage.py runserver"